# aicite

./: .gitignore  .kilocodemodes  .npmrc  README.md  package-lock.json  package.json
docs/: architecture.md  deployment.md  implementation.md  requirements.md  testing.md
npx/: README.md  package-lock.json  package.json
npx/scripts/: sync-templates.js
templates/basic/: .kilocodemodes
templates/basic/.cursor/agents/: developer.assistant.md
templates/basic/.github/agents/: architect.assistant.md  developer.assistant.md
templates/basic/.kilocode/: README.md  architect-assistant.yaml  developer-assistant.yaml
templates/basic/docs/: README.md  architecture.md  deployment.md  implementation.md  requirements.md
uvx/: README.md  __init__.py  pyproject.toml
uvx/.github/: README.md
uvx/aicite/: __init__.py  __main__.py  cli.py
uvx/docs/: README.md  implementation.md  requirements.md
uvx/scripts/: sync-templates.py
uvx/templates/basic/.github/agents/: architect.assistant.md
uvx/templates/basic/docs/: deployment.md
