[project]
name = "aicite"
version = "0.0.6"
description = "Open-source CLI utility to bootstrap AI assistant project context and agent prompts."
license = { text = "MIT" }
authors = [{ name = "Mehul H", email = "hmv.workspace@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.0.0"]

[project.scripts]
aicite = "aicite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
